--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                DAIA
-version:             0.20
+version:             0.21
 abstract:            Document Availability Information API in Perl
 license:             ~
 author:              
@@ -15,6 +15,7 @@ requires:
     DateTime::Format::ISO8601:     0.06
     JSON:                          2.15
     URI:                           1.35
+    XML::Simple:                   2.14
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
