--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                DAIA
-version:             0.21
+version:             0.25
 abstract:            Document Availability Information API in Perl
 license:             ~
 author:              
@@ -13,6 +13,7 @@ requires:
     DateTime::Duration:            0
     DateTime::Format::Duration:    1.03
     DateTime::Format::ISO8601:     0.06
+    IO::File:                      0
     JSON:                          2.15
     URI:                           1.35
     XML::Simple:                   2.14
