--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                DAIA
-version:             0.25
+version:             0.26
 abstract:            Document Availability Information API in Perl
 license:             ~
 author:              
@@ -8,13 +8,16 @@ author:
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
+    Carp::Clan:                    5.0
     CGI:                           3.0
     Data::Validate::URI:           0.05
     DateTime::Duration:            0
     DateTime::Format::Duration:    1.03
     DateTime::Format::ISO8601:     0.06
     IO::File:                      0
+    IO::Scalar:                    1.126
     JSON:                          2.15
+    LWP::Simple:                   1.4
     URI:                           1.35
     XML::Simple:                   2.14
 meta-spec:
