--- a/META.yml
+++ b/META.yml
@@ -1,39 +1,47 @@
---- #YAML:1.0
-name:               DAIA
-version:            0.31
-abstract:           Document Availability Information API in Perl
+---
+abstract: 'Document Availability Information API'
 author:
-    - Jakob Voss <jakob.voss@gbv.de>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Jakob Voss'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:                 0
-    Carp::Clan:           5.0
-    CGI:                  3.0
-    Data::Validate::URI:  0.05
-    DateTime:             0.50
-    DateTime::Duration:   0
-    DateTime::Format::Duration:  1.03
-    IO::File:             0
-    IO::Scalar:           1.126
-    JSON:                 2.15
-    LWP::Simple:          1.4
-    Scalar::Util:         0
-    URI:                  1.35
-    XML::Simple:          2.14
-resources:
-    homepage:    http://purl.org/NET/DAIA
-    license:     http://dev.perl.org/licenses/
-    repository:  http://daia.sourceforge.net/
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  English: 0
+  File::Spec: 0
+  Test::More: 0
+  Test::Perl::Critic: 0
+  URI: 0
+  XML::LibXML: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300005, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: DAIA
+requires:
+  CGI: 0
+  Carp: 0
+  Carp::Clan: 0
+  Data::Dumper: 0
+  Data::Validate::URI: 0
+  DateTime: 0
+  DateTime::Duration: 0
+  DateTime::Format::Duration: 0
+  Encode: 0
+  Exporter: 0
+  IO::File: 0
+  IO::Scalar: 0
+  JSON: 0
+  LWP::Simple: 0
+  POSIX: 0
+  Scalar::Util: 0
+  UNIVERSAL: 0
+  XML::Simple: 0
+  base: 0
+  strict: 0
+  utf8: 0
+  warnings: 0
+resources:
+  bugtracker: https://github.com/gbv/daia/issues
+  repository: https://github.com/gbv/daia
+version: 0.35
