--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ build_requires:
   File::Spec: 0
   Test::More: 0
   URI: 0
+  XML::LibXML: 0
   utf8: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
@@ -35,7 +36,7 @@ requires:
   POSIX: 0
   Pod::Usage: 0
   Scalar::Util: 0
-  UNIVERSAL: 0
+  XML::SAX: 0
   XML::Simple: 0
   base: 0
   strict: 0
@@ -43,4 +44,4 @@ requires:
 resources:
   bugtracker: https://github.com/gbv/daia/issues
   repository: https://github.com/gbv/daia
-version: 0.41
+version: 0.42
