Import of VOJ/DAIA-0.421 from CPAN.
gitpan-cpan-distribution: DAIA
gitpan-cpan-version:      0.421
gitpan-cpan-path:         VOJ/DAIA-0.421.tar.gz
gitpan-cpan-author:       VOJ
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300005, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Dist::Zilla version 4.300017, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -43,5 +43,6 @@ requires:
   warnings: 0
 resources:
   bugtracker: https://github.com/gbv/daia/issues
-  repository: https://github.com/gbv/daia
-version: 0.42
+  homepage: https://github.com/gbv/daia
+  repository: https://github.com/gbv/daia.git
+version: 0.421
